unpackaged/main/default/objects/Error_Log_Event__e/Error_Log_Event__e.object-meta.xml
<CustomObject>
    <description>Platform event for error logging. Published by ErrorLogger, consumed by ErrorLogEventTrigger to create Error_Log__c records in a separate transaction.</description>
    <label>Error Log Event</label>
    <pluralLabel>Error Log Events</pluralLabel>
</CustomObject>