unpackaged/main/default/objects/Error_Log_Event__e/fields/Class_Name__c.field-meta.xml
<CustomField>
    <fullName>Class_Name__c</fullName>
    <description>Apex class or Flow API name where the error occurred.</description>
    <label>Class Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>