unpackaged/main/default/objects/Error_Log_Event__e/fields/Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Record_Id__c</fullName>
    <description>Related record ID (optional).</description>
    <label>Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>