unpackaged/main/default/objects/Error_Log_Event__e/fields/Running_User__c.field-meta.xml
<CustomField>
    <fullName>Running_User__c</fullName>
    <description>User ID of the running user, captured at publish time since the PE trigger runs as Automated Process.</description>
    <label>Running User</label>
    <length>18</length>
    <type>Text</type>
</CustomField>