unpackaged/main/default/objects/Error_Log_Event__e/fields/Severity__c.field-meta.xml
<CustomField>
    <fullName>Severity__c</fullName>
    <description>Severity level: ERROR, WARNING, INFO, DEBUG.</description>
    <label>Severity</label>
    <length>10</length>
    <type>Text</type>
</CustomField>