unpackaged/main/default/objects/Error_Log_Event__e/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>Source of the error: Apex, Flow, Integration, Other.</description>
    <label>Source</label>
    <length>50</length>
    <type>Text</type>
</CustomField>