unpackaged/main/default/objects/Error_Log_Event__e/fields/Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Timestamp__c</fullName>
    <description>Datetime.now() captured at publish time.</description>
    <label>Timestamp</label>
    <type>DateTime</type>
</CustomField>